// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionView should render the QuestionView component, question details and answers 1`] = `
<div
  className="componentContainer"
  id="questionView"
>
  <a
    className="link back"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-circle-left blue"
    />
     Back
  </a>
  <div
    className="questionFormArea"
  >
    <div
      className="questionForm"
    >
      <div
        className="questionViewTitle"
      >
        Question 1 from the Quiz 1 quiz
      </div>
      <div
        className="questionDetailsContainerLarge"
      >
        <div
          className="detailsHeading"
        >
          Question description:
        </div>
        <div
          className="detailsContent"
        >
          Test question
        </div>
      </div>
    </div>
    <div
      className="questionImageArea"
    >
      <div
        className="imgView"
      >
        <img
          alt=""
          className="preview"
        />
      </div>
      <div
        className="link deleteImg"
        onClick={[Function]}
      >
        <span>
          <i
            className="fas fa-trash-alt red"
          />
           Delete Image
        </span>
      </div>
    </div>
  </div>
  <div
    className="headerContainer"
  >
    <div
      id="answersTitle"
    >
      Answers
    </div>
    <a
      className="addButton linkStandard"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus-circle green"
      />
       Add an answer
    </a>
  </div>
  <div
    className="answerHeadings"
    id="answerHeadings"
  >
    <div
      id="numberHeader"
    >
      Answer
    </div>
    <div
      id="descriptionHeader"
    >
      Description
    </div>
    <div
      id="correctAnswerHeading"
    >
      Correct answer?
    </div>
    <div
      id="optionsHeader"
    />
  </div>
  <div
    id="answers"
  >
    <div>
      <div>
        <div
          className="answerContainer"
        >
          <div
            className="ansNumber"
          >
            1
          </div>
          <div
            className="ansDecription"
          >
            Test answer
          </div>
          <div
            className="correctAns"
          >
            <i
              className="far fa-times-circle red"
            />
          </div>
          <div
            className="options"
          >
            <a
              className="deleteOption linkStandard"
              id="deleteAnswer"
              onClick={[Function]}
            >
              <i
                className="fas fa-trash-alt red"
              />
               Delete
            </a>
            <a
              className="edit linkStandard"
              id="editAnswer"
              onClick={[Function]}
            >
              <i
                className="fas fa-edit blue"
              />
               Edit
            </a>
          </div>
        </div>
      </div>
      <div>
        <div
          className="answerContainer"
        >
          <div
            className="ansNumber"
          >
            2
          </div>
          <div
            className="ansDecription"
          >
            Test answer2
          </div>
          <div
            className="correctAns"
          >
            <i
              className="far fa-check-circle green"
            />
          </div>
          <div
            className="options"
          >
            <a
              className="deleteOption linkStandard"
              id="deleteAnswer"
              onClick={[Function]}
            >
              <i
                className="fas fa-trash-alt red"
              />
               Delete
            </a>
            <a
              className="edit linkStandard"
              id="editAnswer"
              onClick={[Function]}
            >
              <i
                className="fas fa-edit blue"
              />
               Edit
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuestionView should render the QuestionView component, update question form and no answers if the answers array is empty 1`] = `
<div
  className="componentContainer"
  id="questionView"
>
  <a
    className="link back"
    onClick={[Function]}
  >
    <i
      className="fas fa-chevron-circle-left blue"
    />
     Back
  </a>
  <div
    className="questionFormArea"
  >
    <div
      className="questionForm"
    >
      <div
        className="questionViewTitle"
      >
        Question 1 from the Quiz 1 quiz
      </div>
      <div
        className="questionDetailsContainerLarge"
      >
        <div
          className="detailsHeading"
        >
          Question description:
        </div>
        <div
          className="detailsContent"
        >
          Test question
        </div>
      </div>
    </div>
    <div
      className="questionImageArea"
    >
      <div
        className="imgView"
      >
        <img
          alt=""
          className="preview"
        />
      </div>
      <div
        className="link deleteImg"
        onClick={[Function]}
      >
        <span>
          <i
            className="fas fa-trash-alt red"
          />
           Delete Image
        </span>
      </div>
    </div>
  </div>
  <div
    className="headerContainer"
  >
    <div
      id="answersTitle"
    >
      Answers
    </div>
    <a
      className="addButton linkStandard"
      onClick={[Function]}
    >
      <i
        className="fas fa-plus-circle green"
      />
       Add an answer
    </a>
  </div>
  <div
    className="answerHeadings"
    id="answerHeadings"
  >
    <div
      id="numberHeader"
    >
      Answer
    </div>
    <div
      id="descriptionHeader"
    >
      Description
    </div>
    <div
      id="correctAnswerHeading"
    >
      Correct answer?
    </div>
    <div
      id="optionsHeader"
    />
  </div>
  <div
    id="answers"
  />
</div>
`;
